--- a/src/components/ProjectsData.module.css
+++ b/src/components/ProjectsData.module.css
@@ -1,7 +1,7 @@
 .container {
-    padding: 10px 0 10px 0;
+    padding: 0px 0 10px 0;
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 10px;
     justify-items: center;
     height: calc(100vh - 54px);
